<resources>
    <string name="app_name">Agenda Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_side_menu">Options</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_calendar">Calendar</string>
    <string name="menu_account">Account</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_master_calendar">MasterCalendar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_calendar">Calendar</string>

    <string name="create_event">Create Event</string>

    <string-array name="priority_array">
        <item>High</item>
        <item>Low</item>
        <item>Medium</item>
    </string-array>


</resources>
