<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_help" />
        <!--
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/menu_login" />
            -->
    </group>

    <item android:title="Other ISH">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/nav_extra"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/menu_extra" />
        </menu>
    </item>

</menu>
