<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mainActivity">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.myapplication.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.myapplication.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_prioritized"
        android:name="com.example.myapplication.ui.priority.PriorityFragment"
        android:label="@string/menu_priority"
        tools:layout="@layout/fragment_prioritized" />

    <fragment
        android:id="@+id/createEventFragment"
        android:name="com.example.myapplication.ui.events.CreateEventFragment"
        android:label="fragment_create_event"
        tools:layout="@layout/fragment_create_event" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.myapplication.customcalendar.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />

</navigation>